fixed dark mode

--- a/styles/base.css
+++ b/styles/base.css
@@ -25,7 +25,7 @@ header {
 
 header,
 main {
-	max-width: 800px;
+	max-width: 2000px;
 	margin: 0 auto;
 }
 
@@ -85,7 +85,7 @@ h1 {
 nav {
 	background-color: black;
 	margin: 0 auto;
-	max-width: 800px;
+	max-width: 2000px;
 }
 nav ul {
 	list-style-type: none;
@@ -113,19 +113,21 @@ h2 {
 
 .card {
 	border: 1px solid black;
+	background-color: #34643b;
 	border-radius: 10px;
 	overflow: hidden;
 	margin-top: 16px;
 }
 
-.card a {
-	color: black;
+.card a, .card h4, .card p {
+	color: #fff;
 	padding: 3px;
+	font-size: large;
 }
 
 section h3 {
-	background-color: #34643b;
-	color: white;
+	background-color: #d3e6d3fe;
+	color: black;
 	padding: 10px;
 }
 
@@ -140,9 +142,9 @@ section {
 footer {
 	padding-top: 10px;
 	padding-bottom: 10px;
-	margin-top: 16px;
 	color: white;
 	background-color: black;
-	max-width: 800px;
+	max-width: 2000px;
 	margin: 0 auto;
+	
 }
