--- a/styles/larger.css
+++ b/styles/larger.css
@@ -30,4 +30,17 @@
 	.navigation li {
 		display: flex;
 	}
+
+	.card {
+		margin-left: 2rem;
+		margin-right: 2rem;
+		padding-bottom: 1rem;
+	}
+
+	footer {
+		position: absolute;
+		bottom: 0;
+		width: 100%;
+		height: 4rem; 
+	}
 }
